home-cluster/flux-operator/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-operator-web
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 9080
